# Ts3ScreenShare-Server

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/network/: NetworkHelper.h  connected_client.h  udp_server.h
include/network/packets/: CreateWindowPacket.h  IPacket.h  LoginPacket.h  StartStreamPacket.h  StartWatchingPacket.h  StopWatchingPacket.h
src/network/: connected_client.cpp  udp_server.cpp
